# backend/internal/models/post.go
@@ -1,0 +1,11 @@
+package models
+
+type Post struct {
+	ID        int    `json:"id"`
+	UserID    int    `json:"user_id" binding:"required"`
+	Slug      string `json:"slug,omitempty"`
+	Title     string `json:"title" binding:"required"`
+	Content   string `json:"content" binding:"required"`
+	CreatedAt string `json:"created_at,omitempty"`
+	UpdatedAt string `json:"updated_at,omitempty"`
+}
